# cicero

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  async.py  bundestag_sample_response.json  docker-compose.yml  fuck_instructions.md  pyproject.toml  requirements.txt  response.json  run_dev.sh  test_results.txt
.deploy/develop/: reset_database.py
.docs/ai_markdowns/: flows.md
_deploy/develop/: init_database.py
_documentation/: TODO.md
_documentation/ai_markdowns/: data_model_db.md  data_model_domain.md
_learning/: learn_async_2.py  learning_typing.py  output.txt
backend/: Dockerfile  config.py  logger.py
deploy/develop/: init_database.py  reset_database.py
docs/source/: conf.py  index.rst  src.config.rst  src.domain.irepository.common.i_corpora.rst  src.domain.irepository.common.i_joint_q.rst  src.domain.irepository.common.rst  src.domain.irepository.context.i_country.rst  src.domain.irepository.context.i_institution.rst  src.domain.irepository.context.i_party.rst  src.domain.irepository.context.i_period.rst  src.domain.irepository.context.i_speaker.rst  src.domain.irepository.context.rst  src.domain.irepository.rst  src.domain.irepository.text.I_speech_text.rst  src.domain.irepository.text.i_protocol.rst  src.domain.irepository.text.i_speech.rst  src.domain.irepository.text.i_speech_metrics.rst  src.domain.irepository.text.i_text_clean.rst  (+151 more)
documentation/: maps.md
frontend/: .gitignore  Dockerfile  README.md  angular.json  package-lock.json  package.json
src/: __init__.py  config.py  logger.py
tests/: README.md  run_tests.py
(+526 files in other folders)
