[tool.poetry]
name = "cicero"
version = "0.1.0"
description = "Cicero project"
authors = ["janeenda"]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.11"
uvicorn = "^0.29.0"
fastapi = "^0.116.0"
psycopg2-binary = "^2.9.10"
spacy = "^3.8.7"
gensim = "^4.3.3"
python-dotenv = "^1.1.1"
SQLAlchemy = "^2.0.41"
requests = "^2.32.4"
rich = "^14.0.0"
tqdm = "^4.67.1"
typer = "^0.16.0"
split-words = "^0.1.0"
regex = "^2024.4.28"
pandas = "^2.2.2"
numpy = "^1.26.4"
bertopic = "^0.16.0"
umap-learn = "^0.5.5"
hdbscan = "^0.8.33"
sentence-transformers = "^2.7.0"
torch = "^2.3.0"

[tool.black]
line-length = 110

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
